clusters/talos-cluster/email-engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-engine-deployment
  namespace: email-engine
  labels:
    app: email-engine-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: email-engine-deployment
  template:
    metadata:
      name: email-engine-deployment
      labels:
        app: email-engine-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: email-engine
          image: andris9/emailengine:v1.14.8
          ports:
            - containerPort: 3000
              name: email-engine-tcp
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
