clusters/talos-cluster/email-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-engine-service
  namespace: email-engine
spec:
  selector:
    app: email-engine-deployment
  ports:
    - name: email-engine-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
