clusters/talos-cluster/email-engine/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-engine-route
  namespace: email-engine
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "ee.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: email-engine-service
          port: 3000
